--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "devDependencies": {
     "parcel": "^2.0.0-nightly.524",
     "sass": "^1.32.4"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-private-methods": "^7.12.1",
+    "core-js": "^3.8.3",
+    "fractional": "^1.0.0",
+    "regenerator-runtime": "^0.13.7"
   }
 }
