--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/areddin409/forkify#readme",
   "devDependencies": {
-    "parcel": "^2.0.0-nightly.524",
+    "parcel": "^2.0.0-beta.1",
     "sass": "^1.32.4"
   },
   "dependencies": {
